enable property plugin now since it is released